--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
+  flutter_quill: ^5.0.3
   flutter_riverpod: ^1.0.4
+  flutter_staggered_grid_view: ^0.6.1
   logging: ^1.0.2
   routemaster: ^1.0.1
 
