--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_riverpod: ^1.0.4
   flutter_staggered_grid_view: ^0.6.1
   logging: ^1.0.2
+  neopop: ^1.0.2
   routemaster: ^1.0.1
 
 dev_dependencies:
