--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_quill: ^5.0.3
   flutter_riverpod: ^1.0.4
   flutter_staggered_grid_view: ^0.6.1
+  font_awesome_flutter: ^10.1.0
   logging: ^1.0.2
   routemaster: ^1.0.1
 
