--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_quill: ^5.0.3
   flutter_riverpod: ^2.1.1
+  flutter_spinkit: ^5.1.0
   flutter_staggered_grid_view: ^0.6.1
   font_awesome_flutter: ^10.1.0
   logging: ^1.0.2
